修改主色调

--- a/src/style/element/index.scss
+++ b/src/style/element/index.scss
@@ -3,7 +3,7 @@
   'white': #ffffff,
     'black': #000000,
     'primary': (
-      'base': #4d70ff,
+      'base': #409eff,
     ),
     'success': (
       'base': #67c23a,
